@@ -1,3 +1,8 @@
+2024-12-03 Philipp Klaus Krause <philipp@colecovision.eu>
+
+	* support/regression/tests/largeoddstruct.c.in:
+	  Disable test for host, since we can't assume C23 support in host compilers yet.
+
 2024-12-02 Philipp Klaus Krause <philipp@colecovision.eu>
 
 	* src/f8/gen.c,
